--- a/src/app/table-page/table-page.component.scss
+++ b/src/app/table-page/table-page.component.scss
@@ -5,7 +5,8 @@
   }
 }
 .minHeightFilter{
-  height: 35px!important;
+  margin-bottom: 25px;
+  margin-top:25px ;
 }
 @media screen and (max-width: 40rem) {
 .icon{
