--- a/src/app/widgets/filters/employee-filter/employee-filter.component.html
+++ b/src/app/widgets/filters/employee-filter/employee-filter.component.html
@@ -1,6 +1,6 @@
 <div class="filter-component">
     <div class="white-line"></div>
-    <p class="title">сотрудник</p>
+    <p class="title">   {{'page.employee' | translate}}</p>
     <div class="filter-body">
 
     <div class=" p-fluid  p-grid p-formgrid" >
