--- a/src/app/widgets/filters/payed-filter/payed-filter.component.html
+++ b/src/app/widgets/filters/payed-filter/payed-filter.component.html
@@ -1,6 +1,7 @@
 <div class="filter-component">
     <div class="white-line"></div>
-    <p class="title" >оплата</p>
+    <p class="title" >{{'page.payment' | translate}}
+    </p>
     <div class="filter-body">
 
     <div class=" p-fluid  p-grid p-formgrid" >
