--- a/src/app/widgets/filters/substring-filter/substring-filter.component.html
+++ b/src/app/widgets/filters/substring-filter/substring-filter.component.html
@@ -11,7 +11,8 @@
         <span class="p-input-icon-left">
 
 <input type="text"
-       (change)="onChang()"  placeholder="поиск"
+       (change)="onChang()"
+       placeholder="{{'page.search' | translate}}"
        [disabled]="substringService.disableFastFiled"
        [(ngModel)]="substringService.substringFastFilterData" pInputText/>
     </span>
