--- a/src/app/widgets/filters/work-status-filter/work-status-filter.component.html
+++ b/src/app/widgets/filters/work-status-filter/work-status-filter.component.html
@@ -1,4 +1,4 @@
-<div class="p-fluid  p-grid p-form grid" style="width: 300px">
+<div *ngIf="!minSizeResolution" class="p-fluid  p-grid p-form grid" style="width: 300px">
     <div class="p-field p-col-36 p-md-12">
         <p-dropdown *ngIf="onlyField"
                     (onChange)="changeState()"  style="width: 300px" [showClear]="true"
@@ -7,3 +7,11 @@
                     [(ngModel)]="state" optionLabel="name"></p-dropdown>
     </div>
 </div>
+
+<p-dropdown *ngIf="minSizeResolution"
+            class="min-size-input"
+            (onChange)="changeState()"   [showClear]="true"
+            [options]="states"
+            [style]="{width: '355px'}"
+            placeholder="статус"
+            [(ngModel)]="state" optionLabel="name"></p-dropdown>
