--- a/src/app/widgets/filters/customer-filter/customer-filter.component.html
+++ b/src/app/widgets/filters/customer-filter/customer-filter.component.html
@@ -1,6 +1,6 @@
 <div class="filter-component">
     <div class="white-line"></div>
-    <p class="title">заказчик</p>
+    <p class="title">{{'page.customer' | translate}}</p>
     <div class="filter-body">
         <div class=" p-fluid  p-grid p-formgrid">
             <div class="p-field p-col-36 p-md-12">
