--- a/src/app/widgets/filters/detail-filter/detail-filter.component.html
+++ b/src/app/widgets/filters/detail-filter/detail-filter.component.html
@@ -1,11 +1,11 @@
-<div class=" p-fluid  p-grid p-form grid">
+<div   *ngIf="!minSizeResolution"  class=" p-fluid  p-grid p-form grid">
     <div class="p-field p-col-36 p-md-12">
         <p-autoComplete (onSelect)="changeState()" [(ngModel)]="selected" [suggestions]="details"
                         (completeMethod)="filter($event)" panelStyle="panel-style"
                         field="name"
                         [type]="'search'"
                         (ngModelChange)="change()"
-                        placeholder="выберете деталь"
+                        placeholder="{{'page.chooseDetails' | translate}}"
                         (onClear)="clear()"
                         [dropdown]="true">
             <ng-template let-country pTemplate="item">
@@ -17,3 +17,20 @@
 
     </div>
 </div>
+
+<p-autoComplete  *ngIf="minSizeResolution" (onSelect)="changeState()"
+                 [(ngModel)]="selected" [suggestions]="details"
+                (completeMethod)="filter($event)" panelStyle="panel-style"
+                field="name"
+                 class="min-size-input"
+                [type]="'search'"
+                 (ngModelChange)="change()"
+                 placeholder="{{'page.chooseDetails' | translate}}"
+                 (onClear)="clear()"
+                [dropdown]="true">
+    <ng-template let-country pTemplate="item">
+        <div class="country-item">
+            <div>{{country.name}}</div>
+        </div>
+    </ng-template>
+</p-autoComplete>
