--- a/src/app/widgets/filters/work-period-filter/work-period-filter.component.html
+++ b/src/app/widgets/filters/work-period-filter/work-period-filter.component.html
@@ -1,10 +1,17 @@
 
-<div    class="p-fluid  p-grid p-form grid" style="width: 300px">
+<div  *ngIf="!minSizeResolution"  class="p-fluid  p-grid p-form grid" style="width: 300px">
     <div class="p-field p-col-36 p-md-12">
         <p-dropdown (onChange)="changePeriod()"
-                    placeholder="период"
+                    placeholder="{{'page.period' | translate}}"
                     [options]="periods" [(ngModel)]="period"
                     optionLabel="name"  >
         </p-dropdown>
     </div>
 </div>
+
+<p-dropdown  *ngIf="minSizeResolution"  (onChange)="changePeriod()"
+             placeholder="{{'page.period' | translate}}"
+             [style]="{width:'355px'}"
+            [options]="periods" [(ngModel)]="period"
+            optionLabel="name"  >
+</p-dropdown>
