--- a/src/app/work-master-page/work-master-page.component.html
+++ b/src/app/work-master-page/work-master-page.component.html
@@ -1,7 +1,7 @@
 <!--<div style="background: #F56C6C">-->
 <!--    <p>ЗНАХОДИТЬСЯ В РОЗРОБЦІ</p>-->
 <!--</div>-->
-<app-table-page [startData]="data" title="работы на выполнении"
+<app-table-page [startData]="data" title="{{'page.workOnExecution' | translate}}"
                 [mainColumn]="mainColumn" [stateFilterDisable]="true"
                 (onUpdateData)="onUpdate()"
                 [hideButtonBar]="true"
