--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,9 @@ body {
   transition: 0.5s;
   outline: none;
 }
+.min-size-input>.p-autocomplete-dd .p-autocomplete-input, .p-autocomplete-dd .p-autocomplete-multiple-container{
+  width: 320px !important;
+}
 
 .input-text:focus {
   border: 3px solid grey;
