--- a/src/app/widgets/filters/work-status-filter/work-status-filter.component.html
+++ b/src/app/widgets/filters/work-status-filter/work-status-filter.component.html
@@ -12,6 +12,6 @@
             class="min-size-input"
             (onChange)="changeState()"   [showClear]="true"
             [options]="states"
-            [style]="{width: '355px'}"
+            [style]="{width: '100%'}"
             placeholder="статус"
             [(ngModel)]="state" optionLabel="name"></p-dropdown>
