--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,11 @@ body {
   outline: none;
 }
 .min-size-input>.p-autocomplete-dd .p-autocomplete-input, .p-autocomplete-dd .p-autocomplete-multiple-container{
-  width: 320px !important;
+  width: 100% !important;
+}
+.p-autocomplete{
+  width: 100% !important;
+
 }
 
 .input-text:focus {
